# ZykovLib

./: 3LinkedGraphs.md  AwsomeGraph.md  ElementAdder.hs  F.FF.md  FriendlyAlien.md  GrsphOps.hs  HSP.hs  HSP2.hs  HtmlTest.hs  ImageCreator.hs  Lesson21WK.hs  Main.hs  MoMA-download-index.html  MoMA-index.html  MoMA-interactive-index.html  MyModule.hs  MyModule2.hs  Namefuck.md  Server.hs  TesterParser.hs  ZikovAlgebra.hs  Ztester.hs  ZykovBackend.hs  ZykovCore.hs  ZykovLang.hs  ZykovLang2.hs  ZykovLang3.hs  ZykovLang4.hs  ZykovLang5.hs  ZykovLang6.hs  ZykovLib.code-workspace  aColoredCinemaGraph.md  aSmallColoredMovieMap.md  aVerySmallTetCinemaGraph.md  anEWcinemaGraph.md  cinemaGraph.md  document.md  document2.md  dotAndLineGraph.md  estrellabonita.md  (+52 more)
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
topic/: Main-topic.hs  ZykovBackend-topic.hs  ZykovCoreTopic.hs  ZykovLang3Topic.hs  index-editor.html  index-topic-combox-color.html  index-topic-combox.html  index-topic.html  zykov-backend-topic.cabal  zykovlang-editor-beta.html  zykovlang-editor-with-fonts.html  zykovlang-integrated-wide-layout.html  zykovlang-layout-adjusted.html  zykovlang-wide-layout.html  zykovlang_right_panel.html  zykovlang_right_panel_v2.html  zykovlang_right_panel_v3.html  zykovlang_right_panel_v4.html  zykovlang_right_panel_v5.html  zykovlang_right_panel_v6.html
topic/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
