cabal-version:       >=1.10
name:                zykov-backend-topic
version:             0.1.0.0
synopsis:            ZykovLang Topic Backend
category:            Web
author:              Alfonso Bustamante
maintainer:          you@example.com
build-type:          Simple
description:         Backend server for the ZykovLang Topic Viewer.

executable zykov-backend-topic
  main-is:             Main-topic.hs
  hs-source-dirs:      .
  default-language:    Haskell2010

  other-modules:
    ZykovCoreTopic
    ZykovLang3Topic


  build-depends:
    base >=4.14 && <5,
    servant,
    servant-server,
    aeson,
    wai,
    wai-extra,
    wai-cors,
    warp,
    text,
    bytestring,
    containers,
    process,
    directory,
    case-insensitive,
    filepath
